# ai-ethics-comparator

./: .example.env  .gitignore  AGENTS.md  CLAUDE.md  COMPLETION_STATE.md  CONTRIBUTING.md  GEMINI.md  HANDBOOK.md  README.md  ROADMAP.md  aiService.js  code_review.md  feedback.md  main.py  models.json  n-plan.md  overview.md  package-lock.json  package.json  paradoxes.json  paradoxes.md  pyproject.toml  quick_verify.py  requirements.txt  run_server.sh  server.js  smells.md  staged.diff  verify_moral_complexes.py  verify_persistence.py
archive/: creview.md  croadmap.md  greview.md  review.md
docs/: executive_briefing_architecture.md
lib/: ai_service.py  analysis.py  comparison_report.py  config.py  counterfactual.py  experiment_runner.py  export_data.py  export_pptx.py  fingerprint.py  paradoxes.py  pdf_charts.py  pdf_native.py  query_errors.py  query_processor.py  report_models.py  report_writer.py  reporting.py  stats.py  storage.py  validation.py  view_models.py
public/: app.js  index.html  stats.js  style.css
scripts/: test_pdf_gen.py
templates/: analysis_prompt.txt  base.html  comparison_writer_prompt.txt  experiments.html  index.html  report_writer_prompt.txt
tests/: conftest.py  test_ai_service.py  test_analysis_error_render.py  test_analysis_scoring.py  test_config.py  test_counterfactual.py  test_executive_briefing.py  test_executive_component.py  test_executive_reporting.py  test_experiment_runner.py  test_model_fingerprint_routes.py  test_query_processor.py  test_reporting.py  test_run_id_migration.py  test_startup.py  test_view_models.py
(+28 files in other folders)
