
[project]
name = "ai-ethics-comparator"
version = "0.1.0"
description = "Local-first research tool for repeated LLM ethics experiments and executive brief generation."
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "httpx",
    "jinja2",
    "markdown",
    "markupsafe",
    "openai",
    "pydantic",
    "pydyf>=0.8,<0.11",
    "python-dotenv",
    "python-multipart",
    "python-pptx",
    "uvicorn",
    "weasyprint==61.2",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.uv]
package = false
